GDAPT-41 Cree les endpoints pour la gestion des commendes